some bugs fixed

--- a/views/admin/add-products.ejs
+++ b/views/admin/add-products.ejs
@@ -28,7 +28,7 @@
 
                 <div class="form-group">
                     <label >Price</label>
-                    <input type="text" class="form-control " name="price" id="price" onkeyup="validatePrice()">
+                    <input type="number" class="form-control " name="price" id="price" onkeyup="validatePrice()">
                     <span class="text-danger" id="priceError"></span>
                 </div>
 
