social media links added

--- a/views/user/landingPage.ejs
+++ b/views/user/landingPage.ejs
@@ -135,7 +135,7 @@
             <div class="container">
                 <div class="row text-white g-4">
                     <div class="col-md-6 col-lg-3">
-                        <a class="text-uppercase text-decoration-none brand text-white" href="index.html">GOCYCLE/a>
+                        <a class="text-uppercase text-decoration-none brand text-white" href="/">GOCYCLE</a>
                         
                     </div>
 
@@ -172,7 +172,7 @@
                                 <i class="fas fa-map-marked-alt"></i>
                             </span>
                             <span class="fw-light">
-                                Albert Street, New York, AS 756, United States of America
+                                Inq palarivattom kerala
                             </span>
                         </div>
                         <div class="d-flex justify-content-start align-items-start my-2 text-muted">
@@ -180,7 +180,7 @@
                                 <i class="fas fa-envelope"></i>
                             </span>
                             <span class="fw-light">
-                                attire.support@gmail.com
+                                justinkj765@gmail.com
                             </span>
                         </div>
                         <div class="d-flex justify-content-start align-items-start my-2 text-muted">
@@ -188,7 +188,7 @@
                                 <i class="fas fa-phone-alt"></i>
                             </span>
                             <span class="fw-light">
-                                +9786 6776 236
+                                0000000000
                             </span>
                         </div>
                     </div>
@@ -197,24 +197,20 @@
                         <h5 class="fw-light mb-3">Follow Us</h5>
                         <div>
                             <ul class="list-unstyled d-flex">
+                               
                                 <li>
-                                    <a href="#" class="text-white text-decoration-none text-muted fs-4 me-4">
-                                        <i class="fab fa-facebook-f"></i>
+                                    <a href="https://www.linkedin.com/in/jastin-john-0717851b3" target="_blank" class="text-white text-decoration-none text-muted fs-4 me-4">
+                                        <i class="fab fa-linkedin"></i>
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="#" class="text-white text-decoration-none text-muted fs-4 me-4">
-                                        <i class="fab fa-twitter"></i>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="#" class="text-white text-decoration-none text-muted fs-4 me-4">
+                                    <a href="https://www.instagram.com/justin_vlogger" target="_blank" class="text-white text-decoration-none text-muted fs-4 me-4">
                                         <i class="fab fa-instagram"></i>
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="#" class="text-white text-decoration-none text-muted fs-4 me-4">
-                                        <i class="fab fa-pinterest"></i>
+                                    <a href="https://github.com/Jastin-vlogger" target="_blank" class="text-white text-decoration-none text-muted fs-4 me-4">
+                                        <i class="fab fa-github"></i>
                                     </a>
                                 </li>
                             </ul>
